Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,9 @@ client:
   title:
   license_number:
   about_markdown: |
+    Real Estate is complicated! We make it simpler through bite-sized education and special project assistance for real estate professionals and their clients.
 
+    Derek spends most of the work day researching, educating, and working side by side with his broker and lending partners. Outside of work you’re likely to find he and his wife Natalie around Seattle with his daughters, Delilah and Quinn, clinging to his arm, back or shoulders. Derek believes that you should finish your beer while it’s cold, that the Huskies are the greatest damn sports organization on the planet, and that caring for one another is the most important work any of us have in this life.
   brand: Title & Escrow Guide
   brokerage: Stewart Title Company
   market:
