--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -33,7 +33,7 @@ CTAs:
   first_CTA_text: Open Title
   first_CTA_URL: /homevalue/
   second_CTA_text: Property Info
-  second_CTA_URL: /contact
+  second_CTA_URL: /homesearch/
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/001.jpg
