Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -38,7 +38,7 @@ CTAs:
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/001.jpg
     CTA_title: "Need help with a special project?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
+    CTA_text: "Your success is my passion! I work hard with my clients to improve their business with effective Title and Escrow based strategies. Let’s get together!"
     CTA_link_text: "Contact for a Free Consultation"
     CTA_url: https://adept-darkness.cloudvent.net/contact
 
